fixing value for date_created null

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1865,6 +1865,36 @@ select {
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
+.status {
+	background: #cbd5e1;
+	color: #1e293b;
+	padding: 5px 10px;
+	border-radius: 50px;
+	display: inline-block;
+	text-transform: capitalize;
+	font-weight: 600;
+	font-size:  12px;
+}
+.status.active,
+.status.subscriber {
+	color: #064e3b;
+	background-color: #34d399;
+}
+.status.completed,
+.status.kh_affiliate {
+	color: #0c4a6e;
+	background-color: #7dd3fc;
+}
+.status.pending,
+.status.adminstrator {
+	color: #164e63;
+	background-color: #67e8f9;
+}
+.status.error,
+.status.failed {
+	color: #881337;
+	background-color: #fda4af;
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -2373,4 +2403,3 @@ select {
     padding-right: 1rem;
   }
 }
-
