--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,38 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.status {
+	background: #cbd5e1;
+	color: #1e293b;
+	padding: 5px 10px;
+	border-radius: 50px;
+	display: inline-block;
+	text-transform: capitalize;
+	font-weight: 600;
+	font-size:  12px;
+}
+
+.status.active,
+.status.subscriber {
+	color: #064e3b;
+	background-color: #34d399;
+}
+
+.status.completed,
+.status.kh_affiliate {
+	color: #0c4a6e;
+	background-color: #7dd3fc;
+}
+
+.status.pending,
+.status.adminstrator {
+	color: #164e63;
+	background-color: #67e8f9;
+}
+
+.status.error,
+.status.failed {
+	color: #881337;
+	background-color: #fda4af;
+}
