--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1477,6 +1477,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(34 197 94 / var(--tw-bg-opacity));
 }
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
@@ -1572,6 +1576,10 @@ select {
 .py-20 {
   padding-top: 5rem;
   padding-bottom: 5rem;
+}
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -1878,17 +1886,17 @@ select {
 .status.active,
 .status.subscriber {
 	color: #064e3b;
-	background-color: #34d399;
+	background-color: #d1fae5;
 }
 .status.completed,
 .status.kh_affiliate {
 	color: #0c4a6e;
-	background-color: #7dd3fc;
+	background-color: #e0f2fe;
 }
 .status.pending,
 .status.adminstrator {
 	color: #164e63;
-	background-color: #67e8f9;
+	background-color: #cffafe;
 }
 .status.error,
 .status.failed {
@@ -1934,6 +1942,10 @@ select {
 .hover\:bg-cyan-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(34 211 238 / var(--tw-bg-opacity));
+}
+.hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
@@ -2057,6 +2069,10 @@ select {
 .active\:bg-cyan-600:active {
   --tw-bg-opacity: 1;
   background-color: rgb(8 145 178 / var(--tw-bg-opacity));
+}
+.active\:bg-gray-600:active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 .active\:text-gray-700:active {
   --tw-text-opacity: 1;
