--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1101,6 +1101,12 @@ select {
 .mb-10 {
   margin-bottom: 2.5rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
 .block {
   display: block;
 }
@@ -1288,6 +1294,9 @@ select {
 }
 .flex-wrap {
   flex-wrap: wrap;
+}
+.content-between {
+  align-content: space-between;
 }
 .items-center {
   align-items: center;
