--- a/public/css/app.css
+++ b/public/css/app.css
@@ -992,6 +992,9 @@ select {
 .z-40 {
   z-index: 40;
 }
+.z-10 {
+  z-index: 10;
+}
 .col-span-6 {
   grid-column: span 6 / span 6;
 }
@@ -1110,6 +1113,9 @@ select {
 .mb-10 {
   margin-bottom: 2.5rem;
 }
+.mb-12 {
+  margin-bottom: 3rem;
+}
 .block {
   display: block;
 }
@@ -1160,6 +1166,9 @@ select {
 }
 .h-3 {
   height: 0.75rem;
+}
+.h-96 {
+  height: 24rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1226,6 +1235,9 @@ select {
 }
 .max-w-3xl {
   max-width: 48rem;
+}
+.max-w-md {
+  max-width: 28rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1724,6 +1736,9 @@ select {
 .leading-4 {
   line-height: 1rem;
 }
+.leading-loose {
+  line-height: 2;
+}
 .tracking-widest {
   letter-spacing: 0.1em;
 }
@@ -2013,6 +2028,10 @@ select {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.hover\:underline:hover {
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
 }
 .focus\:z-10:focus {
   z-index: 10;
@@ -2412,6 +2431,10 @@ select {
 }
 @media (min-width: 1024px) {
 
+  .lg\:absolute {
+    position: absolute;
+  }
+
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }
@@ -2432,6 +2455,10 @@ select {
     display: none;
   }
 
+  .lg\:h-auto {
+    height: auto;
+  }
+
   .lg\:w-1\/4 {
     width: 25%;
   }
@@ -2446,6 +2473,14 @@ select {
 
   .lg\:w-80 {
     width: 20rem;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:max-w-md {
+    max-width: 28rem;
   }
 
   .lg\:border-b {
