--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1116,6 +1116,15 @@ select {
 .mb-12 {
   margin-bottom: 3rem;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+.ml-px {
+  margin-left: 1px;
+}
+.mr-5 {
+  margin-right: 1.25rem;
+}
 .block {
   display: block;
 }
@@ -1170,6 +1179,12 @@ select {
 .h-96 {
   height: 24rem;
 }
+.h-full {
+  height: 100%;
+}
+.h-2 {
+  height: 0.5rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1217,6 +1232,12 @@ select {
 }
 .w-3 {
   width: 0.75rem;
+}
+.w-px {
+  width: 1px;
+}
+.w-2 {
+  width: 0.5rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1510,8 +1531,23 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+.bg-orange-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 115 22 / var(--tw-bg-opacity));
+}
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
+}
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 .bg-cover {
   background-size: cover;
@@ -1606,6 +1642,10 @@ select {
   padding-top: 5rem;
   padding-bottom: 5rem;
 }
+.px-px {
+  padding-left: 1px;
+  padding-right: 1px;
+}
 .pt-6 {
   padding-top: 1.5rem;
 }
@@ -1665,6 +1705,9 @@ select {
 }
 .pr-12 {
   padding-right: 3rem;
+}
+.pt-14 {
+  padding-top: 3.5rem;
 }
 .text-left {
   text-align: left;
@@ -2477,6 +2520,10 @@ select {
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-2\/3 {
+    width: 66.666667%;
   }
 
   .lg\:max-w-md {
