--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1334,6 +1334,9 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
+.items-start {
+  align-items: flex-start;
+}
 .items-center {
   align-items: center;
 }
