--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1982,6 +1982,54 @@ select {
     color: rgb(136 19 55);
     background-color: rgb(253 164 175);
 }
+/**
+* Spinner
+*/
+.half-circle-spinner, .half-circle-spinner * {
+    box-sizing: border-box;
+  }
+.half-circle-spinner {
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    position: relative;
+  }
+.half-circle-spinner .circle {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    border: calc(20px / 10) solid transparent;
+  }
+.half-circle-spinner .circle.circle-1 {
+    border-top-color: #FFF;
+    -webkit-animation: half-circle-spinner-animation 1s infinite;
+            animation: half-circle-spinner-animation 1s infinite;
+  }
+.half-circle-spinner .circle.circle-2 {
+    border-bottom-color: #FFF;
+    -webkit-animation: half-circle-spinner-animation 1s infinite alternate;
+            animation: half-circle-spinner-animation 1s infinite alternate;
+  }
+@-webkit-keyframes half-circle-spinner-animation {
+    0% {
+      transform: rotate(0deg);
+
+    }
+    100%{
+      transform: rotate(360deg);
+    }
+  }
+@keyframes half-circle-spinner-animation {
+    0% {
+      transform: rotate(0deg);
+
+    }
+    100%{
+      transform: rotate(360deg);
+    }
+  }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
