--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1702,6 +1702,9 @@ select {
 .text-right {
   text-align: right;
 }
+.align-top {
+  vertical-align: top;
+}
 .font-sans {
   font-family: DM Sans, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1747,6 +1750,9 @@ select {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.capitalize {
+  text-transform: capitalize;
 }
 .leading-5 {
   line-height: 1.25rem;
@@ -1987,13 +1993,13 @@ select {
 */
 .half-circle-spinner, .half-circle-spinner * {
     box-sizing: border-box;
-  }
+}
 .half-circle-spinner {
     width: 20px;
     height: 20px;
     border-radius: 100%;
     position: relative;
-  }
+}
 .half-circle-spinner .circle {
     content: "";
     position: absolute;
@@ -2001,17 +2007,17 @@ select {
     height: 100%;
     border-radius: 100%;
     border: calc(20px / 10) solid transparent;
-  }
+}
 .half-circle-spinner .circle.circle-1 {
     border-top-color: #FFF;
     -webkit-animation: half-circle-spinner-animation 1s infinite;
             animation: half-circle-spinner-animation 1s infinite;
-  }
+}
 .half-circle-spinner .circle.circle-2 {
     border-bottom-color: #FFF;
     -webkit-animation: half-circle-spinner-animation 1s infinite alternate;
             animation: half-circle-spinner-animation 1s infinite alternate;
-  }
+}
 @-webkit-keyframes half-circle-spinner-animation {
     0% {
       transform: rotate(0deg);
@@ -2020,7 +2026,7 @@ select {
     100%{
       transform: rotate(360deg);
     }
-  }
+}
 @keyframes half-circle-spinner-animation {
     0% {
       transform: rotate(0deg);
@@ -2029,7 +2035,7 @@ select {
     100%{
       transform: rotate(360deg);
     }
-  }
+}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
