--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1119,6 +1119,9 @@ select {
 .mb-10 {
   margin-bottom: 2.5rem;
 }
+.-mb-4 {
+  margin-bottom: -1rem;
+}
 .block {
   display: block;
 }
@@ -1229,6 +1232,9 @@ select {
 }
 .w-2 {
   width: 0.5rem;
+}
+.w-1\/2 {
+  width: 50%;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1386,6 +1392,9 @@ select {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1397,6 +1406,9 @@ select {
 }
 .rounded-full {
   border-radius: 9999px;
+}
+.rounded-2xl {
+  border-radius: 1rem;
 }
 .rounded-l-md {
   border-top-left-radius: 0.375rem;
@@ -1561,6 +1573,9 @@ select {
 .p-4 {
   padding: 1rem;
 }
+.p-5 {
+  padding: 1.25rem;
+}
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1692,6 +1707,15 @@ select {
 }
 .pt-14 {
   padding-top: 3.5rem;
+}
+.pl-5 {
+  padding-left: 1.25rem;
+}
+.pr-5 {
+  padding-right: 1.25rem;
+}
+.pt-3 {
+  padding-top: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -2450,6 +2474,14 @@ select {
 
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:w-2\/3 {
+    width: 66.666667%;
+  }
+
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:grid-cols-3 {
