--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,10 +1,11 @@
+/* @import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'; */
+/* ! tailwindcss v3.0.11 | MIT License | https://tailwindcss.com */
 /*
-! tailwindcss v3.0.11 | MIT License | https://tailwindcss.com
-*//*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
-
 *,
 ::before,
 ::after {
@@ -13,19 +14,16 @@
   border-style: solid; /* 2 */
   border-color: currentColor; /* 2 */
 }
-
 ::before,
 ::after {
   --tw-content: '';
 }
-
 /*
 1. Use a consistent sensible line-height in all browsers.
 2. Prevent adjustments of font size after orientation changes in iOS.
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
 */
-
 html {
   line-height: 1.5; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -34,42 +32,34 @@ html {
      tab-size: 4; /* 3 */
   font-family: DM Sans, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
 }
-
 /*
 1. Remove the margin in all browsers.
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
 */
-
 body {
   margin: 0; /* 1 */
   line-height: inherit; /* 2 */
 }
-
 /*
 1. Add the correct height in Firefox.
 2. Correct the inheritance of border color in Firefox. (https://bugzilla.mozilla.org/show_bug.cgi?id=190655)
 3. Ensure horizontal rules are visible by default.
 */
-
 hr {
   height: 0; /* 1 */
   color: inherit; /* 2 */
   border-top-width: 1px; /* 3 */
 }
-
 /*
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
-
 abbr:where([title]) {
   -webkit-text-decoration: underline dotted;
           text-decoration: underline dotted;
 }
-
 /*
 Remove the default font size and weight for headings.
 */
-
 h1,
 h2,
 h3,
@@ -79,30 +69,24 @@ h6 {
   font-size: inherit;
   font-weight: inherit;
 }
-
 /*
 Reset links to optimize for opt-in styling instead of opt-out.
 */
-
 a {
   color: inherit;
   text-decoration: inherit;
 }
-
 /*
 Add the correct font weight in Edge and Safari.
 */
-
 b,
 strong {
   font-weight: bolder;
 }
-
 /*
 1. Use the user's configured `mono` font family by default.
 2. Correct the odd `em` font sizing in all browsers.
 */
-
 code,
 kbd,
 samp,
@@ -110,19 +94,15 @@ pre {
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; /* 1 */
   font-size: 1em; /* 2 */
 }
-
 /*
 Add the correct font size in all browsers.
 */
-
 small {
   font-size: 80%;
 }
-
 /*
 Prevent `sub` and `sup` elements from affecting the line height in all browsers.
 */
-
 sub,
 sup {
   font-size: 75%;
@@ -130,33 +110,27 @@ sup {
   position: relative;
   vertical-align: baseline;
 }
-
 sub {
   bottom: -0.25em;
 }
-
 sup {
   top: -0.5em;
 }
-
 /*
 1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
 2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
 3. Remove gaps between table borders by default.
 */
-
 table {
   text-indent: 0; /* 1 */
   border-color: inherit; /* 2 */
   border-collapse: collapse; /* 3 */
 }
-
 /*
 1. Change the font styles in all browsers.
 2. Remove the margin in Firefox and Safari.
 3. Remove default padding in all browsers.
 */
-
 button,
 input,
 optgroup,
@@ -169,21 +143,17 @@ textarea {
   margin: 0; /* 2 */
   padding: 0; /* 3 */
 }
-
 /*
 Remove the inheritance of text transform in Edge and Firefox.
 */
-
 button,
 select {
   text-transform: none;
 }
-
 /*
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Remove default button styles.
 */
-
 button,
 [type='button'],
 [type='reset'],
@@ -192,80 +162,62 @@ button,
   background-color: transparent; /* 2 */
   background-image: none; /* 2 */
 }
-
 /*
 Use the modern Firefox focus style for all focusable elements.
 */
-
 :-moz-focusring {
   outline: auto;
 }
-
 /*
 Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
 */
-
 :-moz-ui-invalid {
   box-shadow: none;
 }
-
 /*
 Add the correct vertical alignment in Chrome and Firefox.
 */
-
 progress {
   vertical-align: baseline;
 }
-
 /*
 Correct the cursor style of increment and decrement buttons in Safari.
 */
-
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
   height: auto;
 }
-
 /*
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
-
 [type='search'] {
   -webkit-appearance: textfield; /* 1 */
   outline-offset: -2px; /* 2 */
 }
-
 /*
 Remove the inner padding in Chrome and Safari on macOS.
 */
-
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-
 /*
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Change font properties to `inherit` in Safari.
 */
-
 ::-webkit-file-upload-button {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
-
 /*
 Add the correct display in Chrome and Safari.
 */
-
 summary {
   display: list-item;
 }
-
 /*
 Removes the default spacing and border for appropriate elements.
 */
-
 blockquote,
 dl,
 dd,
@@ -281,16 +233,13 @@ p,
 pre {
   margin: 0;
 }
-
 fieldset {
   margin: 0;
   padding: 0;
 }
-
 legend {
   padding: 0;
 }
-
 ol,
 ul,
 menu {
@@ -298,58 +247,47 @@ menu {
   margin: 0;
   padding: 0;
 }
-
 /*
 Prevent resizing textareas horizontally by default.
 */
-
 textarea {
   resize: vertical;
 }
-
 /*
 1. Reset the default placeholder opacity in Firefox. (https://github.com/tailwindlabs/tailwindcss/issues/3300)
 2. Set the default placeholder color to the user's configured gray 400 color.
 */
-
 input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1; /* 1 */
   color: #9ca3af; /* 2 */
 }
-
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1; /* 1 */
   color: #9ca3af; /* 2 */
 }
-
 input::placeholder,
 textarea::placeholder {
   opacity: 1; /* 1 */
   color: #9ca3af; /* 2 */
 }
-
 /*
 Set the default cursor for buttons.
 */
-
 button,
 [role="button"] {
   cursor: pointer;
 }
-
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
 :disabled {
   cursor: default;
 }
-
 /*
 1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
 2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
    This can trigger a poorly considered lint error in some tools but is included by design.
 */
-
 img,
 svg,
 video,
@@ -361,25 +299,20 @@ object {
   display: block; /* 1 */
   vertical-align: middle; /* 2 */
 }
-
 /*
 Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
 */
-
 img,
 video {
   max-width: 100%;
   height: auto;
 }
-
 /*
 Ensure the default browser behavior of the `hidden` attribute.
 */
-
 [hidden] {
   display: none;
 }
-
 [type='text'],[type='email'],[type='url'],[type='password'],[type='number'],[type='date'],[type='datetime-local'],[type='month'],[type='search'],[type='tel'],[type='time'],[type='week'],[multiple],textarea,select {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -396,7 +329,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.5rem;
   --tw-shadow: 0 0 #0000;
 }
-
 [type='text']:focus, [type='email']:focus, [type='url']:focus, [type='password']:focus, [type='number']:focus, [type='date']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='week']:focus, [multiple]:focus, textarea:focus, select:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -409,30 +341,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   border-color: #2563eb;
 }
-
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #6b7280;
   opacity: 1;
 }
-
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color: #6b7280;
   opacity: 1;
 }
-
 input::placeholder,textarea::placeholder {
   color: #6b7280;
   opacity: 1;
 }
-
 ::-webkit-datetime-edit-fields-wrapper {
   padding: 0;
 }
-
 ::-webkit-date-and-time-value {
   min-height: 1.5em;
 }
-
 select {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%236b7280' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
   background-position: right 0.5rem center;
@@ -442,7 +368,6 @@ select {
   -webkit-print-color-adjust: exact;
           color-adjust: exact;
 }
-
 [multiple] {
   background-image: initial;
   background-position: initial;
@@ -452,7 +377,6 @@ select {
   -webkit-print-color-adjust: unset;
           color-adjust: unset;
 }
-
 [type='checkbox'],[type='radio'] {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -476,15 +400,12 @@ select {
   border-width: 1px;
   --tw-shadow: 0 0 #0000;
 }
-
 [type='checkbox'] {
   border-radius: 0px;
 }
-
 [type='radio'] {
   border-radius: 100%;
 }
-
 [type='checkbox']:focus,[type='radio']:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -496,7 +417,6 @@ select {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
 }
-
 [type='checkbox']:checked,[type='radio']:checked {
   border-color: transparent;
   background-color: currentColor;
@@ -504,20 +424,16 @@ select {
   background-position: center;
   background-repeat: no-repeat;
 }
-
 [type='checkbox']:checked {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 }
-
 [type='radio']:checked {
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='3'/%3e%3c/svg%3e");
 }
-
 [type='checkbox']:checked:hover,[type='checkbox']:checked:focus,[type='radio']:checked:hover,[type='radio']:checked:focus {
   border-color: transparent;
   background-color: currentColor;
 }
-
 [type='checkbox']:indeterminate {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 16'%3e%3cpath stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M4 8h8'/%3e%3c/svg%3e");
   border-color: transparent;
@@ -526,12 +442,10 @@ select {
   background-position: center;
   background-repeat: no-repeat;
 }
-
 [type='checkbox']:indeterminate:hover,[type='checkbox']:indeterminate:focus {
   border-color: transparent;
   background-color: currentColor;
 }
-
 [type='file'] {
   background: unset;
   border-color: inherit;
@@ -541,7 +455,6 @@ select {
   font-size: unset;
   line-height: inherit;
 }
-
 [type='file']:focus {
   outline: 1px auto -webkit-focus-ring-color;
 }
@@ -579,31 +492,26 @@ select {
   width: 100%;
 }
 @media (min-width: 640px) {
-
   .container {
     max-width: 640px;
   }
 }
 @media (min-width: 768px) {
-
   .container {
     max-width: 768px;
   }
 }
 @media (min-width: 1024px) {
-
   .container {
     max-width: 1024px;
   }
 }
 @media (min-width: 1280px) {
-
   .container {
     max-width: 1280px;
   }
 }
 @media (min-width: 1536px) {
-
   .container {
     max-width: 1536px;
   }
@@ -1164,14 +1072,20 @@ select {
 .h-20 {
   height: 5rem;
 }
+.h-2\.5 {
+  height: 0.625rem;
+}
+.h-2 {
+  height: 0.5rem;
+}
 .h-3 {
   height: 0.75rem;
 }
 .h-full {
   height: 100%;
 }
-.h-2 {
-  height: 0.5rem;
+.h-40 {
+  height: 10rem;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1218,6 +1132,12 @@ select {
 .w-20 {
   width: 5rem;
 }
+.w-2\.5 {
+  width: 0.625rem;
+}
+.w-2 {
+  width: 0.5rem;
+}
 .w-3 {
   width: 0.75rem;
 }
@@ -1227,8 +1147,8 @@ select {
 .w-px {
   width: 1px;
 }
-.w-2 {
-  width: 0.5rem;
+.w-40 {
+  width: 10rem;
 }
 .min-w-0 {
   min-width: 0px;
@@ -1528,6 +1448,9 @@ select {
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
+.bg-opacity-10 {
+  --tw-bg-opacity: 0.1;
+}
 .bg-cover {
   background-size: cover;
 }
@@ -1664,6 +1587,9 @@ select {
 .pr-1 {
   padding-right: 0.25rem;
 }
+.pl-2 {
+  padding-left: 0.5rem;
+}
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -1687,6 +1613,12 @@ select {
 }
 .pl-5 {
   padding-left: 1.25rem;
+}
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+.pt-3 {
+  padding-top: 0.75rem;
 }
 .text-left {
   text-align: left;
@@ -1833,7 +1765,7 @@ select {
 }
 .text-sky-500 {
   --tw-text-opacity: 1;
-  color: rgb(14 165 233 / var(--tw-text-opacity));
+  color: rgb(12 74 110 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1954,6 +1886,9 @@ select {
 	font-weight: 600;
 	font-size:  12px;
 }
+.status.status-bordered {
+    border-width: 1px;
+}
 .status.processing,
 .status.active,
 .status.subscriber,
@@ -1966,6 +1901,9 @@ select {
 .status.kh_affiliate {
 	color: #0c4a6e;
 	background-color: #e0f2fe;
+}
+.status-bordered.completed {
+    border-color: lighten(#0c4a6e, 5%);
 }
 .status.pending,
 .status.in_renewal,
@@ -2218,330 +2156,253 @@ select {
   opacity: 0.25;
 }
 @media (prefers-color-scheme: dark) {
-
   .dark\:bg-gray-900 {
     --tw-bg-opacity: 1;
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 }
 @media (min-width: 640px) {
-
   .sm\:col-span-4 {
     grid-column: span 4 / span 4;
   }
-
   .sm\:mx-0 {
     margin-left: 0px;
     margin-right: 0px;
   }
-
   .sm\:mx-auto {
     margin-left: auto;
     margin-right: auto;
   }
-
   .sm\:-my-px {
     margin-top: -1px;
     margin-bottom: -1px;
   }
-
   .sm\:ml-3 {
     margin-left: 0.75rem;
   }
-
   .sm\:-mr-2 {
     margin-right: -0.5rem;
   }
-
   .sm\:mt-0 {
     margin-top: 0px;
   }
-
   .sm\:ml-4 {
     margin-left: 1rem;
   }
-
   .sm\:ml-10 {
     margin-left: 2.5rem;
   }
-
   .sm\:ml-6 {
     margin-left: 1.5rem;
   }
-
   .sm\:block {
     display: block;
   }
-
   .sm\:flex {
     display: flex;
   }
-
   .sm\:hidden {
     display: none;
   }
-
   .sm\:h-10 {
     height: 2.5rem;
   }
-
   .sm\:w-10 {
     width: 2.5rem;
   }
-
   .sm\:w-full {
     width: 100%;
   }
-
   .sm\:max-w-md {
     max-width: 28rem;
   }
-
   .sm\:max-w-sm {
     max-width: 24rem;
   }
-
   .sm\:max-w-lg {
     max-width: 32rem;
   }
-
   .sm\:max-w-xl {
     max-width: 36rem;
   }
-
   .sm\:max-w-2xl {
     max-width: 42rem;
   }
-
   .sm\:max-w-xs {
     max-width: 20rem;
   }
-
   .sm\:flex-1 {
     flex: 1 1 0%;
   }
-
   .sm\:translate-y-0 {
     --tw-translate-y: 0px;
     transform: var(--tw-transform);
   }
-
   .sm\:scale-95 {
     --tw-scale-x: .95;
     --tw-scale-y: .95;
     transform: var(--tw-transform);
   }
-
   .sm\:scale-100 {
     --tw-scale-x: 1;
     --tw-scale-y: 1;
     transform: var(--tw-transform);
   }
-
   .sm\:items-start {
     align-items: flex-start;
   }
-
   .sm\:items-center {
     align-items: center;
   }
-
   .sm\:justify-start {
     justify-content: flex-start;
   }
-
   .sm\:justify-center {
     justify-content: center;
   }
-
   .sm\:justify-between {
     justify-content: space-between;
   }
-
   .sm\:rounded-lg {
     border-radius: 0.5rem;
   }
-
   .sm\:rounded-md {
     border-radius: 0.375rem;
   }
-
   .sm\:rounded-tl-md {
     border-top-left-radius: 0.375rem;
   }
-
   .sm\:rounded-tr-md {
     border-top-right-radius: 0.375rem;
   }
-
   .sm\:rounded-bl-md {
     border-bottom-left-radius: 0.375rem;
   }
-
   .sm\:rounded-br-md {
     border-bottom-right-radius: 0.375rem;
   }
-
   .sm\:p-6 {
     padding: 1.5rem;
   }
-
   .sm\:p-20 {
     padding: 5rem;
   }
-
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
-
   .sm\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
   }
-
   .sm\:px-20 {
     padding-left: 5rem;
     padding-right: 5rem;
   }
-
   .sm\:pt-0 {
     padding-top: 0px;
   }
-
   .sm\:pb-4 {
     padding-bottom: 1rem;
   }
-
   .sm\:text-left {
     text-align: left;
   }
 }
 @media (min-width: 768px) {
-
   .md\:col-span-2 {
     grid-column: span 2 / span 2;
   }
-
   .md\:col-span-1 {
     grid-column: span 1 / span 1;
   }
-
   .md\:mt-0 {
     margin-top: 0px;
   }
-
   .md\:mb-0 {
     margin-bottom: 0px;
   }
-
   .md\:grid {
     display: grid;
   }
-
   .md\:w-1\/2 {
     width: 50%;
   }
-
   .md\:w-auto {
     width: auto;
   }
-
   .md\:w-2\/3 {
     width: 66.666667%;
   }
-
   .md\:w-1\/3 {
     width: 33.333333%;
   }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
-
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-
   .md\:gap-6 {
     gap: 1.5rem;
   }
-
   .md\:border-t-0 {
     border-top-width: 0px;
   }
-
   .md\:border-l {
     border-left-width: 1px;
   }
 }
 @media (min-width: 1024px) {
-
   .lg\:absolute {
     position: absolute;
   }
-
   .lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }
-
   .lg\:ml-80 {
     margin-left: 20rem;
   }
-
   .lg\:mb-0 {
     margin-bottom: 0px;
   }
-
   .lg\:block {
     display: block;
   }
-
   .lg\:hidden {
     display: none;
   }
-
   .lg\:h-auto {
     height: auto;
   }
-
   .lg\:w-1\/4 {
     width: 25%;
   }
-
   .lg\:w-1\/2 {
     width: 50%;
   }
-
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
-
   .lg\:w-auto {
     width: auto;
   }
-
   .lg\:w-80 {
     width: 20rem;
   }
-
   .lg\:w-2\/3 {
     width: 66.666667%;
   }
-
   .lg\:max-w-md {
     max-width: 28rem;
   }
-
   .lg\:border-b {
     border-bottom-width: 1px;
   }
-
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
   }
-
   .lg\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
