adding container, row and column component

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1150,6 +1150,33 @@ select {
 .w-40 {
   width: 10rem;
 }
+.w-1\/6 {
+  width: 16.666667%;
+}
+.w-1\/5 {
+  width: 20%;
+}
+.w-1\/4 {
+  width: 25%;
+}
+.w-1\/3 {
+  width: 33.333333%;
+}
+.w-2\/5 {
+  width: 40%;
+}
+.w-3\/5 {
+  width: 60%;
+}
+.w-2\/3 {
+  width: 66.666667%;
+}
+.w-4\/5 {
+  width: 80%;
+}
+.w-5\/6 {
+  width: 83.333333%;
+}
 .min-w-0 {
   min-width: 0px;
 }
@@ -1584,6 +1611,12 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
+.pl-2 {
+  padding-left: 0.5rem;
+}
+.pr-10 {
+  padding-right: 2.5rem;
+}
 .pr-1 {
   padding-right: 0.25rem;
 }
@@ -1610,12 +1643,6 @@ select {
 }
 .pl-5 {
   padding-left: 1.25rem;
-}
-.pl-2 {
-  padding-left: 0.5rem;
-}
-.pr-10 {
-  padding-right: 2.5rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
