--- a/public/css/app.css
+++ b/public/css/app.css
@@ -769,11 +769,11 @@ select {
 .mr-3 {
   margin-right: 0.75rem;
 }
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 .mr-1 {
   margin-right: 0.25rem;
@@ -904,38 +904,11 @@ select {
 .w-10 {
   width: 2.5rem;
 }
-.w-1\/6 {
-  width: 16.666667%;
-}
-.w-1\/5 {
-  width: 20%;
-}
-.w-1\/4 {
-  width: 25%;
-}
-.w-1\/3 {
-  width: 33.333333%;
-}
-.w-2\/5 {
-  width: 40%;
+.w-3 {
+  width: 0.75rem;
 }
 .w-1\/2 {
   width: 50%;
-}
-.w-3\/5 {
-  width: 60%;
-}
-.w-2\/3 {
-  width: 66.666667%;
-}
-.w-4\/5 {
-  width: 80%;
-}
-.w-5\/6 {
-  width: 83.333333%;
-}
-.w-3 {
-  width: 0.75rem;
 }
 .w-px {
   width: 1px;
@@ -1409,9 +1382,6 @@ select {
 .pr-1 {
   padding-right: 0.25rem;
 }
-.pb-12 {
-  padding-bottom: 3rem;
-}
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1829,6 +1799,195 @@ select {
     100%{
       transform: rotate(360deg);
     }
+}
+/**
+* COlumns
+*/
+.col-1 {
+  width: 16.666667%;
+}
+.col-2 {
+  width: 20%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.333333%;
+}
+.col-5 {
+  width: 40%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 60%;
+}
+.col-8 {
+  width: 66.666667%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 80%;
+}
+.col-11 {
+  width: 83.333333%;
+}
+.col-12 {
+  width: 100%;
+}
+@media (min-width: 768px) {
+
+  .md\:col-1 {
+    width: 16.666667%;
+  }
+
+  .md\:col-2 {
+    width: 20%;
+  }
+
+  .md\:col-3 {
+    width: 25%;
+  }
+
+  .md\:col-4 {
+    width: 33.333333%;
+  }
+
+  .md\:col-5 {
+    width: 40%;
+  }
+
+  .md\:col-6 {
+    width: 50%;
+  }
+
+  .md\:col-7 {
+    width: 60%;
+  }
+
+  .md\:col-8 {
+    width: 66.666667%;
+  }
+
+  .md\:col-9 {
+    width: 75%;
+  }
+
+  .md\:col-10 {
+    width: 80%;
+  }
+
+  .md\:col-11 {
+    width: 83.333333%;
+  }
+
+  .md\:col-12 {
+    width: 100%;
+  }
+}
+@media (min-width: 640px) {
+
+  .sm\:col-1 {
+    width: 16.666667%;
+  }
+
+  .sm\:col-2 {
+    width: 20%;
+  }
+
+  .sm\:col-3 {
+    width: 25%;
+  }
+
+  .sm\:col-4 {
+    width: 33.333333%;
+  }
+
+  .sm\:col-5 {
+    width: 40%;
+  }
+
+  .sm\:col-6 {
+    width: 50%;
+  }
+
+  .sm\:col-7 {
+    width: 60%;
+  }
+
+  .sm\:col-8 {
+    width: 66.666667%;
+  }
+
+  .sm\:col-9 {
+    width: 75%;
+  }
+
+  .sm\:col-10 {
+    width: 80%;
+  }
+
+  .sm\:col-11 {
+    width: 83.333333%;
+  }
+
+  .sm\:col-12 {
+    width: 100%;
+  }
+}
+@media (min-width: 1024px) {
+
+  .lg\:col-1 {
+    width: 16.666667%;
+  }
+
+  .lg\:col-2 {
+    width: 20%;
+  }
+
+  .lg\:col-3 {
+    width: 25%;
+  }
+
+  .lg\:col-4 {
+    width: 33.333333%;
+  }
+
+  .lg\:col-5 {
+    width: 40%;
+  }
+
+  .lg\:col-6 {
+    width: 50%;
+  }
+
+  .lg\:col-7 {
+    width: 60%;
+  }
+
+  .lg\:col-8 {
+    width: 66.666667%;
+  }
+
+  .lg\:col-9 {
+    width: 75%;
+  }
+
+  .lg\:col-10 {
+    width: 80%;
+  }
+
+  .lg\:col-11 {
+    width: 83.333333%;
+  }
+
+  .lg\:col-12 {
+    width: 100%;
+  }
 }
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
